Unpin some pinned gems
* This created a problem with quiet_assets so I removed it.
* LocaleField rewritten to support Typeahead 0.10

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -35,7 +35,7 @@ fieldset {
 }
 
 legend {
-  font-size: $legend-size; 
+  font-size: $legend-size;
   line-height: $legend-line-height;
   text-transform: uppercase;
   font-weight: 600;
@@ -99,7 +99,7 @@ legend {
       margin-top: 5px;
     }
 
-    .twitter-typeahead * {
+    .twitter-typeahead>* {
       margin: 0px;
     }
 
