--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -37,6 +37,8 @@ nav.navbar.navbar-dark
             = nav_dropdown_link "Translation Statistics", "stats", "index", stats_url
             = nav_dropdown_link "Translation Word Report", "stats", "translation_report", stats_translation_report_url
             = nav_dropdown_link "Project Translation Report", "stats", "project_translation_report", stats_project_translation_report_url
+            = nav_dropdown_link "Incoming New Words Report", "stats", "incoming_new_words_report", stats_incoming_new_words_report_url
+            = nav_dropdown_link "Translator Report", "stats", "translator_report", stats_translator_report_url
 
         - if current_user.admin?
           = nav_link "Users", "users", users_path
