--- a/app/views/stats/project_translation_report.slim
+++ b/app/views/stats/project_translation_report.slim
@@ -10,3 +10,5 @@ hr.dividers
 .translation_report
   = form_tag stats_generate_project_translation_report_path(format: :csv)
     = render partial: 'stats/date_fields'
+    .form-actions
+      = submit_tag 'Get Report', class: 'btn btn-primary'
