--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -18,6 +18,6 @@ footer
     | &nbsp;
     i.fa.fa-heart
     | &nbsp;suggestions! &nbsp;&nbsp; submit them&nbsp;
-    = link_to 'here', Shuttle::Configuration.app[:feedback_link]
-  p 
+    = link_to 'here', Shuttle::Configuration.services[:feedback_link]
+  p
     = image_tag "footer.png"
