Translation edit reasons workflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,7 @@
 
 // ----- BASE
 @import "css3-mixins";
+@import "base/bootstrap-custom";
 @import "base/vars";
 @import "base/grid";
 @import "base/typography";
