--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -31,8 +31,7 @@ nav.navbar.navbar-dark
 
         li.nav-link.dropdown
           a.dropdown-toggle href="#" data-toggle="dropdown"
-            | Stats&nbsp;
-            = fa_icon "caret-down"
+            | Stats
           ul.dropdown-menu
             = nav_dropdown_link "Translation Statistics", "stats", "index", stats_url
             = nav_dropdown_link "Translation Word Report", "stats", "translation_report", stats_translation_report_url
@@ -46,8 +45,7 @@ nav.navbar.navbar-dark
 
         li.nav-link.dropdown
           a.dropdown-toggle href="#" data-toggle="dropdown"
-            | Search&nbsp;
-            = fa_icon "caret-down"
+            | Search
           ul.dropdown-menu
             = nav_dropdown_link "Translations", "search", "translations", search_translations_url
             = nav_dropdown_link "Keys", "search", "keys", search_keys_url
