Adds model validations and code improvements for article webhooks feature

--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -66,13 +66,14 @@
           .controls
             = f.text_field :article_webhook_url, class: 'tooltip-parent', :'data-tooltip' => '#article_webhook_url_tooltip'
             .tooltip#article_webhook_url_tooltip
-              | This URL will be posted to when an article's translation gets ready.
-                It is used to notify client systems about translations getting available to be consumed.  HTTP Post body will contain 
+              ' This URL will be posted to when an article's translation gets ready.
+                It is used to notify client systems about translations getting available to be consumed.  HTTP Post body will contain
               tt article_name
-              | , 
-              tt project_name 
-              | and 
-              tt ready status.
+              |,
+              tt'  project_name
+              ' and
+              tt' ready
+              '  status.
       fieldset
         legend Locale Settings
         .control-group
