[SHUTTLE-738] Use last_import_requested_at as created timestamp
UI still shows CREATED as the column label, but the timestamp is read
from Article.last_import_requested_at.

--- a/app/views/home/_item.slim
+++ b/app/views/home/_item.slim
@@ -33,7 +33,12 @@ tr.row_class
       = link_to truncate(item.name), api_v1_project_article_url(item.project.id, item.name)
 
   / Create Date
-  td.centered = item.created_at.strftime('%m/%d/%Y')
+  td.centered
+    - if item.is_a?(Commit)
+      = item.created_at.strftime('%m/%d/%Y')
+    - else
+      = item.last_import_requested_at.strftime('%m/%d/%Y')
+
 
   / Due Date
   td.due-date.centered
