--- a/app/views/commits/_layout.slim
+++ b/app/views/commits/_layout.slim
@@ -26,7 +26,7 @@
           data-tooltip-position-my='top middle'
         ]
           | Export Format Not Defined
-        .tooltip#missing_format_tooltip
+        .qtip-tooltip#missing_format_tooltip
           | You must set a default manifest format to use this feature
       - else
         button.primary.disabled Translating
