--- a/app/views/home/_item.slim
+++ b/app/views/home/_item.slim
@@ -31,15 +31,18 @@ tr.row_class
       = link_to item.revision_prefix, project_commit_url(item.project, item)
     - elsif item.is_a?(Article)
       = link_to truncate(item.name), api_v1_project_article_url(item.project.id, item.name)
+    - elsif item.is_a?(Asset)
+      = link_to truncate(item.name), project_asset_url(item.project, item)
     - elsif item.is_a?(Group)
       = truncate(item.name)
-
   / Create Date
   td.centered
     - if item.is_a?(Commit)
       = item.created_at.strftime('%m/%d/%Y')
     - elsif item.is_a?(Article)
       = item.last_import_requested_at.strftime('%m/%d/%Y')
+    - elsif item.is_a?(Asset)
+      = item.created_at.strftime('%m/%d/%Y')
     - elsif item.is_a?(Group)
       = item.created_at.strftime('%m/%d/%Y')
 
@@ -102,6 +105,5 @@ tr.row_class
     td
       - if item.is_a?(Commit)
         button.submit href=project_commit_url(item.project, item) Monitor
-      - else
+      - elsif item.is_a?(Article)
         button.submit disabled="disabled" Monitor
-
